Fixed header alignment, page num fix, tab specific message, authors

--- a/static/css/components/fulltext-search-suggestion.less
+++ b/static/css/components/fulltext-search-suggestion.less
@@ -17,9 +17,16 @@
   &__header {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     padding: 5px;
     margin-bottom: 3px;
+    img {
+      min-height: 30px;
+      min-width: 30px;
+      @media (min-width: @width-breakpoint-tablet) {
+        align-items: center;
+      }
+    }
   }
 
   &__title {
